tests/fixtures/deployment_backend_acesso_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-acesso-app
  name: backend-acesso-app
  namespace: example-ns-prd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-acesso-app
  template:
    metadata:
      labels:
        app: backend-acesso-app
    spec:
      containers:
      - name: backend-acesso-app
        image: registry.example.com:4567/example/backend:v2026.06.12
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: 700m
            memory: 2Gi
          requests:
            cpu: 350m
            memory: 384Mi
      nodeSelector:
        env: prd
        type: app
status:
  availableReplicas: 2
  readyReplicas: 2
  replicas: 2
