tests/fixtures/route_backend_acesso_app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-acesso-app
  namespace: example-ns-prd
  labels:
    app: backend-acesso-app
spec:
  host: example-backend.apps.cluster.local
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: backend-acesso-app
    weight: 100
