tests/fixtures/service_backend_acesso_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-acesso-app
  namespace: example-ns-prd
  labels:
    app: backend-acesso-app
spec:
  type: ClusterIP
  clusterIP: 10.42.31.169
  ports:
  - name: tcp
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: backend-acesso-app
